--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ header {
 }
 
 #necklace {
-	border: 2px solid grey;
+	border: 3px solid grey;
 }
 
 a {
@@ -39,4 +39,8 @@ a {
 
 a:hover {
 	text-decoration: underline;
+}
+
+#press a {
+	border: 3px solid grey;
 }
