--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
 	font-family: myFirstFont;
-	src: url(..fonts/Baskerville.ttc);
+	src: url("../fonts/Baskerville.ttc");
 }
 
 /*////////// Global Styles //////////*/
